Removed class attendance event type, added new event types [lecture,Quiz,Laboratory] and remove the specify others input field from both updated and create of events.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,7 +15,7 @@
   }
 
     .btn-primary {
-    @apply bg-gray-900 hover:bg-gray-700 text-white font-medium py-2 px-4 rounded-md text-center
+    @apply bg-gray-900 hover:bg-gray-700 text-white font-medium py-2 px-4 rounded-md text-center transition-colors duration-200 ease-in-out
   }
 
   /*Scanner styles */
